kubernetes/apps/streamflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamflow
spec:
  selector:
    app: streamflow
  ports:
    - port: 8080
      targetPort: http
      name: http
