kubernetes/apps/streamflow/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: streamflow
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`streamflow.mpdavis.com`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: streamflow
          port: 8080
  tls: {}
